<resources>
    <string name="app_name">Events Circle</string>

    <!-- Escolha Tipo de Conta -->
    <string name="texto_cadastro">Falta pouco para acessar e curtir nossos \n eventos, complete seu cadastro !</string>
    <string name="texto_preencher">* Preencha todos os dados abaixo para completar seu cadastro.</string>
    <string name="pessoa_fisica">Pessoa física</string>
    <string name="pessoa_juridica">Pessoa jurídica</string>
    <string name="continuar">CONTINUAR</string>

    <!-- Informações Conta Jurídica -->
    <string name="criar_conta">Criar Conta</string>
    <string name="texto_juridico">Falta pouco para acessar e curtir nossos eventos, complete seu cadastro de conta Pessoa Jurídica.</string>
    <string name="nome_proprietario">Nome do Proprietário</string>
    <string name="cnpj">CNPJ</string>
    <string name="razao_social">Razão Social</string>
    <string name="nome_fantasia">Nome Fantasia</string>

    <!-- Informações Conta Física -->
    <string name="conta_fisica">Falta pouco para acessar e curtir nossoo eventos, complete seu cadastro !</string>
    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="data_nascimento">Data de Nascimento</string>

    <!-- Informações Conta Física2 -->
    <string name="texto_fisico2">Para finalizar, insira um email e senha \n que serão usados para fazer login.</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="finalizar_cadastro">Finalizar Cadastro</string>
    <string name="li_concordo">Li e concordo com</string>
    <string name="termos_condicoes">Termos e Condições</string>
    <string name="nome_home">Olá, Pedro!</string>
    <string name="apresentacao_home">O que gostaria de fazer hoje?</string>
    <string name="eventos_da_semana">Eventos da semana</string>
    <string name="estabelecimento_recomendados">Estabelecimento recomendados</string>
    <string name="eventos_do_mes">Eventos do mês</string>
    <string name="frase1_boas_vindas">Fique por dentro das melhores atrações em sua cidade e encontre eventos baseados em seus gostos e interesses</string>

    <!-- Tela Organizador Home -->
    <string name="other_events">Outros Eventos</string>
    <string name="my_events">Meus eventos</string>
    <string name="lets_new">Vamos organizar um evento?</string>
    <string name="Helo_user">Olá, Pedro!</string>

    <!-- Tela Organizador Novo evento -->
    <string name="new_event">Novo Evento</string>
    <string name="lets_go">Vamos lá! Para criar um evento, precisamos de algumas informações.</string>
    <string name="define_name">Defina um nome para seu evento</string>
    <string name="description_event">Descreva como será seu evento</string>

    <!-- Tela Data novo Evento -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data_do_evento">Data do evento</string>
    <string name="time_initi">Horário Inicio</string>
    <string name="end_time">Horãrio Término</string>
    <string name="avant">Avançar</string>

    <!-- Tela Local novo Evento -->
    <string name="text_will">Agora... precisamos de algumas informações de onde vai acontecer o seu evento.</string>
    <string name="cep">CEP</string>
    <string name="adress">Logradouro</string>


</resources>