<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModelRegister"
            type="com.example.projetoeventos.model.viewmodel.ViewModelRegisterUser" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_preto">

        <ImageView
            android:id="@+id/btn_voltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_seta_voltar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/criar_conta"
            android:textColor="@color/verde"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_voltar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_voltar" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/texto_fisico2"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/texto_preencher"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.546"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="32dp"
            android:textColor="@color/white"
            android:background="@drawable/edt_custom"
            android:drawableEnd="@drawable/ic_email"
            android:hint="@string/email"
            android:text="@{viewModelRegister.email}"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/cinza2"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <EditText
            android:id="@+id/txt_senha"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="32dp"
            android:textColor="@color/white"
            android:background="@drawable/edt_custom"
            android:drawableEnd="@drawable/ic_cadeado"
            android:hint="@string/senha"
            android:text="@{viewModelRegister.senha}"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:textColorHint="@color/cinza2"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_email" />

        <EditText
            android:id="@+id/txt_confirmaSenha"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edt_custom"
            android:drawableEnd="@drawable/ic_cadeado"
            android:hint="@string/confirmar_senha"
            android:textColor="@color/white"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:textColorHint="@color/cinza2"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_senha" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/appCompatCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:textSize="14sp"
            android:layout_marginStart="32dp"
            android:buttonTint="@color/verde"
            android:text="@string/li_concordo"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_confirmaSenha" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/termos_condicoes"
            android:layout_marginTop="36dp"
            android:layout_marginStart="2dp"
            android:textColor="@color/verde"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/appCompatCheckBox"
            app:layout_constraintTop_toBottomOf="@+id/txt_confirmaSenha" />

        <android.widget.Button
            android:id="@+id/confirmar_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/btn_verde"
            android:text="@string/finalizar_cadastro"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatCheckBox" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>